# MSc-project

./: .gitmodules  README.md
planning/: main.tex  references.bib
report/: SelfArx.cls  article.aux  article.bbl  article.blg  article.dvi  article.out  article.tex  article.toc  sample.bib  thesis-info.tex  thesis.aux  thesis.dvi  thesis.out  thesis.ps  thesis.tex  thesis.toc
report/Appendix1/: appendix1.tex
report/Appendix2/: appendix2.tex
report/Appendix3/: appendix3.tex
report/Appendix4/: appendix4.tex
report/Conclusion/: conclusion.tex
report/Discussion/: discussion.tex
report/Introduction/: introduction.tex
report/Method/: method.tex
report/Method/Figs/: DataCPUGPUFlowchart.psd
report/Preamble/: preamble.tex
report/References/: references.bib
report/Results/: results.tex
report/Results/Figs/: CUDARecIt.eps  GPUMarketShare.eps  OSMarketShare.eps  OpenCLBarChart.eps  SequentialBarChart.eps
report/Theory/: theory.tex
result/CSV/: cl.csv  cu.csv  dc.csv  seq.csv
result/CSV/20480/: cl-NEW_TESTS.csv  cu-NEW_TESTS.csv  cu-NEW_TESTS_CLASS_BUFFER.csv  cu-NEW_TESTS_CLASS_BUFFER_RECURSIVE.csv  dc-NEW_TESTS.csv  seq-NEW_TESTS.csv
result/CSV/Matlab/: all_data.mat  cl.mat  cu.mat  dc.mat  script.m  stuff.mat
result/CSV/Matlab/Figs/: CUDABarChart.eps  CUDAStructVSClass.eps  DirectComputeBarChart.eps  GPUStepExecutionTime.eps  TotExecTime.eps
result/SourceMonitor/: CUDA.smproj  CUDA_metrics.csv  DC.smproj  DC_metrics.csv  OpenCL.smproj  OpenCL_metrics.csv
src/: CMakeLists.txt
src/0. HelloWorldExamples/Cuda/Cuda/: Cuda.vcxproj
src/0. HelloWorldExamples/DirectCompute/: DirectCompute.cpp
src/0. HelloWorldExamples/OpenCL/OpenCL/: OpenCL.cpp
src/0. HelloWorldExamples/SequentialCplusplus/SequentialCplusplus/: SequentialCplusplus.cpp
src/1. Sequential/: CMakeLists.txt
src/1. Sequential/Shaders/: boxVert.glsl  particleSystemFrag.glsl
src/1. Sequential/Source/: Application.h  Camera.h  CudaCode.cu  CudaCode.cuh  OctreeNode.cpp  OctreeNode.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/1.5. CUDA 1.0/: CMakeLists.txt
src/1.5. CUDA 1.0/Source/: Cudacode.cu  Cudacode.cuh  OctreeNode.cpp  OctreeNode.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/2. CUDA/: CMakeLists.txt
src/2. CUDA/Shaders/: boxVert.glsl  particleSystemFrag.glsl  particleSystemVert.glsl
src/2. CUDA/Source/: Application.h  Cudacode.cu  Cudacode.cuh  OctreeNode.cpp  ParticleSystem.cpp  ParticleSystem.cu  ParticleSystem.cuh  ParticleSystem.h  main.cpp
src/3. OpenCL/: CMakeLists.txt
src/3. OpenCL/CLKernels/: UpdForce.cl  UpdPos.cl
src/3. OpenCL/Source/: Cudacode.cu  OpenCLSim.cpp  OpenCLSim.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp  sOctreeNode.h
src/4. DirectCompute/: CMakeLists.txt
src/4. DirectCompute/Shaders/: RawCS.hlsl  UpdFor.hlsl  UpdPos.hlsl
src/4. DirectCompute/Source/: DCSim.cpp  DCSim.h  OctreeNode.cpp  OctreeNode.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/CUDA/: CMakeLists.txt
src/CUDA/Cuda/: Cuda.sln
src/CUDA/Cuda/Cuda/: Cuda.vcxproj  add.cu
src/CUDA/Cuda/Cuda/x64/Debug/: add.cu-1297006754.deps  add.cu.cache
src/CUDA/Cuda/Cuda/x64/Debug/Cuda.tlog/: Cuda.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/CUDA/Cuda/x64/Debug/: Cuda.ilk
src/CUDA/Source/: Cudacode.cu  Cudacode.cuh  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/Common/: Application.h  Camera.h  Cell.h  MyTimer.cpp  MyTimer.h  OctreeNode.h  PerfTest.h  Shader.h  config.h.in
src/Cuda/: Cuda.sln
src/Cuda/Cuda/: kernel.cu
src/DirectCompute/: CMakeLists.txt  DCUtils.cpp  DirectCompute.vcxproj.filters  stdafx.cpp
src/DirectCompute/CS/: UpdFor.hlsl  UpdPos.hlsl  VectorAddCS.hlsl
src/DirectCompute/Source/: Application.h  DCSim.cpp  DCSim.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp  sOctreeNode.h
src/HelloWorldExamples/CUDA/: CMakeLists.txt  main.cu
src/HelloWorldExamples/Cuda/Cuda/: kernel.cuh  main.cpp
src/HelloWorldExamples/DirectCompute/: CMakeLists.txt  DCUtils.hpp  DirectCompute.vcxproj  VectorAddCS.hlsl  main.cpp
src/HelloWorldExamples/OpenCL/: CMakeLists.txt  main.cpp
src/HelloWorldExamples/SequentialCplusplus/SequentialCplusplus/: SequentialCplusplus.vcxproj  SequentialCplusplus.vcxproj.filters
src/OpenCL/: CMakeLists.txt  OpenCL.sln
src/OpenCL/Debug/: OpenCL.ilk
src/OpenCL/OpenCL/: OpenCL.cpp  OpenCL.vcxproj  OpenCL.vcxproj.filters  VectorAddition.cl  stdafx.cpp
src/OpenCL/OpenCL/Debug/: vc141.idb
src/OpenCL/OpenCL/Debug/OpenCL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/OpenCL/OpenCL/x64/Debug/: vc141.idb
src/OpenCL/OpenCL/x64/Debug/OpenCL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/OpenCL/OpenCL/x64/Release/OpenCL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCL.lastbuildstate  OpenCL.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/OpenCL/Source/: Application.h  OpenCLSim.cpp  OpenCLSim.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/OpenCL/x64/Debug/: OpenCL.ilk
src/OpenCL/x64/Release/: OpenCL.iobj  OpenCL.ipdb
src/OpenGL/: CMakeLists.txt
src/OpenGL/Shaders/: fragment.glsl  vertex.glsl
src/OpenGL/Source/: CudaCode.cu  CudaCode.cuh  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/Sequential/: CMakeLists.txt
src/Sequential/Source/: OctreeNode.cpp  ParticleSystem.cpp  ParticleSystem.h  main.cpp
src/SequentialCplusplus/: SequentialCplusplus.sln
src/Shaders/: boxFrag.glsl
src/SkePU/: CMakeLists.txt
src/SkePU/CLKernels/: UpdPos.cl
src/SkePU/Source/: OpenCLSim.cpp  ParticleSystem.cpp  ParticleSystem.h  SkepuSim.cpp  SkepuSim.h  main.cpp
